[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Graphics/Enemy/cannon ball/cannon ball.png" type="Texture" id=1]
[ext_resource path="res://Scenes/cannonBallDownwardsLogic.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sound/enemy shoot/Cannon Shoot1Fire02.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sound/Shape SFX/03Shape Pick UpShape Pick Up 2.wav" type="AudioStream" id=4]

[sub_resource type="PhysicsMaterial" id=2]
friction = 0.4
bounce = 1.0

[sub_resource type="CircleShape2D" id=1]
radius = 26.0192

[node name="cannonball" type="Node2D"]
position = Vector2( 10, -20 )

[node name="RigidBody2D" type="RigidBody2D" parent="." groups=["cannonball"]]
mass = 3.0
physics_material_override = SubResource( 2 )
gravity_scale = 15.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2( -1, 0 )
scale = Vector2( 3.37, 3.372 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="RigidBody2D"]
position = Vector2( -47, -830 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="RigidBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
position = Vector2( -1, 0 )
scale = Vector2( 3.37, 3.372 )
shape = SubResource( 1 )

[node name="cannonShoot" type="AudioStreamPlayer2D" parent="RigidBody2D"]
stream = ExtResource( 3 )
volume_db = 5.0
pitch_scale = 0.8
autoplay = true
bus = "EnemyCannon"

[node name="BallImpact" type="AudioStreamPlayer2D" parent="RigidBody2D"]
stream = ExtResource( 4 )
pitch_scale = 1.2
bus = "EnemyCannon"

[node name="Timer" type="Timer" parent="RigidBody2D"]
process_mode = 0
wait_time = 3.0
one_shot = true
autostart = true
__meta__ = {
"_editor_description_": "Timer for ball to kill."
}

[connection signal="body_entered" from="RigidBody2D/Area2D" to="RigidBody2D" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="RigidBody2D/Timer" to="RigidBody2D" method="_on_Timer_timeout"]
